Update Apple and Google Play Store.ipynb

--- a/Apple and Google Play Store.ipynb
+++ b/Apple and Google Play Store.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Guided Project 1**\n",
+    "# **Guided Project**\n",
     "Our company builds Android and iOS mobile apps. Our job today is to analyze what types of apps attract more users to help our developers better understand. This is because our revenue is based off in-app ads. "
    ]
   },
