Update Apple and Google Play Store.ipynb

--- a/Apple and Google Play Store.ipynb
+++ b/Apple and Google Play Store.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# **Guided Project**\n",
-    "Our company builds Android and iOS mobile apps. Our job today is to analyze what types of apps attract more users to help our developers better understand. This is because our revenue is based off in-app ads. "
+    " The goal is to analyze what types of apps attract more users to help app developers better understand what apps to create. This is because the company's revenue is based off in-app ads. "
    ]
   },
   {
