Update Apple and Google Play Store.ipynb

--- a/Apple and Google Play Store.ipynb
+++ b/Apple and Google Play Store.ipynb
@@ -1160,9 +1160,9 @@
    "metadata": {},
    "source": [
     "# **Conclusion**\n",
-    "In this project, we analyzed data about the App Store and Google Play mobile apps with the goal of recommending an app genre that can be profitable for both markets.\n",
+    "In this project, I analyzed data about the App Store and Google Play mobile apps with the goal of recommending an app genre that can be profitable for both markets.\n",
     "\n",
-    "We concluded that the books and references genre could be profitable for both the Google Play and the App Store markets. Although the markets are already full of libraries, we could create new innovations to this new app by adding some unique features besides the raw version of new book. Some innovations could be audio versions of the book and chapter quizzes."
+    "I concluded that the books and references genre could be profitable for both the Google Play and the App Store markets. Although the markets are already full of libraries, we could create new innovations to this new app by adding some unique features besides the raw version of new book. Some innovations could be audio versions of the book and chapter quizzes."
    ]
   },
   {
